<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".editquestion.EditQuestionActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutQuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextQuestionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_number"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoutQuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextQuestionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_text" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerQuestionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <LinearLayout
        android:id="@+id/linearLayoutMainOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linearLayoutOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/buttonAddNewOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_option" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/mandatoryCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mandatory" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>